<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="match_parent"
        android:layout_height="334dp"
        android:contentDescription="logo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:layout_centerInParent="true" />

</RelativeLayout>
