<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/bmi_calculator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BMI Calculator"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/calorie_calculator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calorie Calculator"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/recipe_showcase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recipe Showcase"
        android:layout_margin="16dp"/>

</LinearLayout>
